# panel-agentes

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
adr/: 001-stack-decisions.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  parser.rs
src/components/: AgentCard.tsx  AgentDetail.tsx  AgentStatusBadge.tsx  Dashboard.tsx  RefreshButton.tsx  TaskList.tsx
src/context/: RepoDataContext.tsx
src/lib/: fetchTareasGitHub.test.ts  fetchTareasGitHub.ts  parseTaskMarkdown.test.ts  parseTaskMarkdown.ts  tauri.ts
src/services/: taskParser.test.ts  taskParser.ts
src/test/: smoke.test.tsx
