[package]
name = "panel-agentes"
version = "0.1.0"
description = "Panel de control de agentes en loop"
authors = ["Builder VPS-2"]
edition = "2021"

[lib]
name = "panel_agentes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "panel-agentes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
